# MAGSplitter

./: .gitignore  README.md  dataframe_manipulation.py  input_to_df.py  main.py  ptools_writing.py  pyproject.toml
dev/: future_utils_for_package_refactor.py
example/: 0.pf  orf_map.txt
magsplitter/: _version.py  dataframe_manipulation.py  main.py  ptools_writing.py
magsplitter/example/: contig_info.tsv
tests/: test_df_manipulation_and_orf_deremoval.py
